sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:8: error: type mismatch;
 found   : Int
 required: ?{def /(x$1: ? >: Double(1.3)): ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method int2long in object Int of type (x: Int)Long
 and method int2float in object Int of type (x: Int)Float
 are possible conversion functions from Int to ?{def /(x$1: ? >: Double(1.3)): ?}
      gap /= 1.3;
      ^AlgCombSort:8: error: overloaded method value / with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Double)
      gap /= 1.3;
          ^AlgCombSort:20: error: not found: value swapped
  } while(gap >= 1 || swapped)
                      ^